--- a/MLAgents/agentkart_config_sac.yaml
+++ b/MLAgents/agentkart_config_sac.yaml
@@ -1,15 +1,9 @@
 behaviors:
   AgentKart:
-    trainer_type: ppo
+    trainer_type: sac
     hyperparameters:
-      batch_size: 10
-      buffer_size: 100
-      learning_rate: 3.0e-4
-      beta: 5.0e-4
-      epsilon: 0.2
-      lambd: 0.99
-      num_epoch: 3
-      learning_rate_schedule: linear
+      buffer_init_steps: 100
+      init_entcoef: 0.7
     network_settings:
       normalize: false
       hidden_units: 128
